--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
+fastapi==0.112.0
+uvicorn[standard]==0.30.5
+jinja2==3.1.4
+
+boto3==1.34.156
+botocore==1.34.156
+
+requests==2.32.3
+pandas==2.2.2
+numpy==1.26.4
+joblib==1.4.2
+
+tensorflow==2.17.0
 
